# Corporate-Expense_Assistant

./: .gitignore  config.py  main.py  prompts.py  pyproject.toml  system_prompt.md  test_gradio.py
UI/: app.py  approval_page.py  auth.py  budget_page.py  chat_page.py  constants.py  progress_page.py  utils.py
api/: app.py  auth.py
api/routes/: approval_routes.py  auth_routes.py  budget_routes.py  chat_routes.py  ocr_routes.py  progress_routes.py  upload_routes.py  voucher_ocr_routes.py
frontend/: approval.html  budget.html  chat.html  login.html  progress.html
src/agent/: expense_agent.py
src/corporate_expense_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/db/: auth.py  database.py  models.py  seed_data.py
src/tools/: __init__.py  approval_tool.py  budget_tool.py  compliance_tool.py  email_tool.py  ocr_tool.py  pdf_tool.py  progress_tool.py  reimbursement_tool.py  voucher_tool.py
src/ui/: app.py
static/css/: app.css
static/js/: api.js
templates/: approval.html  base.html  budget.html  chat.html  login.html  progress.html
