[project]
name = "corporate-expense-assistant"
version = "0.1.0"
description = "企业财务报销助手"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=6.19.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "matplotlib>=3.8.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.0,<0.11.10",
    "pillow>=9.0.0,<12.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "reportlab>=5.0.0",
    "sqlalchemy>=2.0.51",
]

[tool.setuptools.packages.find]
where = ["src"]
